--- a/webserver/html/scrna_goblet.html
+++ b/webserver/html/scrna_goblet.html
@@ -8,12 +8,8 @@
   <title>scRNA</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Moderustic:wght@300..800&family=Noto+Sans+JP:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  
   <link href="/css/reset.css" rel="stylesheet">
   <link href="/css/global.css" rel="stylesheet">
   <link href="/css/lib.css" rel="stylesheet">
@@ -27,10 +23,10 @@
 
 <body class="about">
   <header>
-    <div id="title-text">
-      <h1>Gut<p>Omics</p>Atlas</h1>
-    </div>
     <nav>
+      <div id="title-text">
+        <img src="/imgs/logo_processed.png" id="logo"><h1>Gut<p>Omics</p>Atlas</h1>
+      </div>
       <div id="nav">
         <a href="/html/home.html">Home</a>
         <a href="/html/ai_chat.html">Chat with AI</a>
@@ -38,6 +34,7 @@
         <a href="/html/snatac.html">snATAC</a>
         <a href="/html/sm.html">Spatial Metabolomics</a>
         <a href="/html/st.html">Spatial Transcriptomics</a>
+        <div>|</div>
         <a href="/html/help.html">Help</a>
         <a href="/html/about.html">About</a>
       </div>
